applications/forward-auth/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forward-auth
  labels:
    app: forward-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: forward-auth
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: forward-auth
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - image: mesosphere/traefik-forward-auth:3.1.0
          imagePullPolicy: Always
          name: forward-auth
          securityContext:
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 911
            runAsGroup: 911
          resources:
            limits:
              cpu: 100m
              memory: 32Mi
            requests:
              cpu: 10m
              memory: 8Mi
          ports:
            - containerPort: 4181
              protocol: TCP
